--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,8 +18,11 @@
     justify-content: space-between;
 }
 
-.search {
+.search,
+.search-result {
     width: 361px;
+}
+.search {
     height: var(--search-height);
     background-color: rgba(22, 24, 35, 0.06);
     border-radius: var(--search-border-radius);
@@ -56,13 +59,15 @@
     &:focus-within {
         border-color: rgba(22, 24, 35, 0.2);
     }
-    &:hover {
-        border-color: rgba(22, 24, 35, 0.2);
-        .search-btn {
-            background-color: rgba(22, 24, 35, 0.06);
-        }
-    }
 }
+
+.search-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, 0.5);
+    padding: 5px 12px;
+}
+
 .clear,
 .loading {
     position: absolute;
