--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -95,3 +95,10 @@
         cursor: pointer;
     }
 }
+
+.more-btn {
+    font-size: 1.5rem;
+    margin-left: 24px;
+    background-color: transparent;
+    padding: 4px 8px;
+}
