--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,7 +4,7 @@
 
     justify-content: center;
     min-width: 100px;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-weight: 700;
     padding: 4px 16px;
     border-radius: 4px;
@@ -28,6 +28,11 @@
 .icon + .title,
 .title + .icon {
     margin-left: 8px;
+}
+.icon {
+    display: inline-block;
+    width: 25px;
+    text-align: center;
 }
 
 .rounded {
