--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -10,6 +10,8 @@
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
     --text-color: #333;
+
+    --default-layout-horizontal-spacer: 24px;
 }
 
 * {
