--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -8,6 +8,7 @@
         border-radius: 0;
         font-weight: 600;
         padding: 11px 16px;
+        line-height: 1.8rem;
         &:hover {
             background-color: rgba(22, 24, 35, 0.03);
         }
@@ -16,4 +17,23 @@
 
 .menu-popper {
     padding-bottom: 8px;
+}
+
+//Header
+
+.header {
+    position: relative;
+}
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 1.3rem;
+}
+.header-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
