--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -9,7 +9,7 @@
     //Default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
-    --text-color: #333;
+    --text-color: #161823;
 
     --default-layout-horizontal-spacer: 24px;
 }
@@ -41,4 +41,21 @@ input [tabindex] {
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+body {
+    .tippy-box {
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 1.3rem;
+        line-height: 2rem;
+
+        background-color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-arrow {
+        background-color: rgba(84, 84, 84, 0.92);
+    }
+    .tippy-content {
+        padding: 8px 9px;
+    }
 }
