--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -97,10 +97,32 @@
     }
 }
 
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.action-btn {
+    background-color: transparent;
+    font-size: 1.8rem;
+    color: #161823;
+    padding: 4px 12px;
+    cursor: pointer;
+}
+
 .more-btn {
     font-size: 1.5rem;
     margin-left: 24px;
     background-color: transparent;
     padding: 4px 8px;
+    cursor: pointer;
+}
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-left: 12px;
     cursor: pointer;
 }
