--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -6,9 +6,14 @@
         justify-content: flex-start;
         margin-left: 0px !important;
         border-radius: 0;
-        font-weight: 600;
+        font-weight: 500;
         padding: 11px 16px;
         line-height: 1.8rem;
+
+        &.separate {
+            border-top: 1px solid rgba(22, 24, 35, 0.12);
+        }
+
         &:hover {
             background-color: rgba(22, 24, 35, 0.03);
         }
