--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,6 +9,7 @@
     padding: 4px 16px;
     border-radius: 4px;
     text-align: center;
+    font-family: 'ProximaNova', sans-serif;
     cursor: pointer;
     background-color: var(--white);
     border: 1px solid transparent;
