--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -34,11 +34,28 @@
 }
 
 .action-btn {
+    display: flex;
+    position: relative;
     background-color: transparent;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: #161823;
     padding: 4px 12px;
     cursor: pointer;
+}
+
+.badge {
+    position: absolute;
+    top: -3px;
+    right: 0px;
+    padding: 0px 6px;
+    height: 2rem;
+    line-height: 2rem;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--white);
+    font-family: var(--font-family);
+    background-color: var(--primary);
 }
 
 .more-btn {
