--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,8 @@
 }
 .container {
     width: var(--default-layout-width);
+    //Khi trình duyệt co nhỏ lại nó vẫn chiếm 100%
+    max-width: 100%;
     padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     margin-top: var(--default-layout-header-height);
