--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -21,7 +21,8 @@
     }
 
     &.disable {
-        pointer-events: none;
+        cursor: not-allowed;
+        // pointer-events: none;
         opacity: 0.5;
     }
 }
@@ -53,7 +54,12 @@
     border-color: var(--primary);
 
     &:hover {
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), #fe2c55;
+        background: linear-gradient(
+                0deg,
+                rgba(0, 0, 0, 0.06),
+                rgba(0, 0, 0, 0.06)
+            ),
+            #fe2c55;
         border-color: var(--primary);
     }
 }
