fix_route_responsive

--- a/src/components/pages/TableUsers/TableUsers.module.scss
+++ b/src/components/pages/TableUsers/TableUsers.module.scss
@@ -1,5 +1,4 @@
 .add-new {
-    display: flex;
     align-items: center;
     justify-content: space-between;
 }
@@ -24,4 +23,9 @@
     i {
         margin-right: 5px;
     }
+}
+
+.customize-table {
+    width: inherit;
+    overflow-x: auto;
 }
