--- a/src/components/pages/Login/Login.module.scss
+++ b/src/components/pages/Login/Login.module.scss
@@ -59,3 +59,12 @@
         transform: translateY(-50%) rotate(360deg);
     }
 }
+
+.bl_nav_register {
+    display: flex;
+    justify-content: center;
+
+    .txt_register {
+        color: var(--primary);
+    }
+}
