--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -1,8 +1,13 @@
 .home-container {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #f0f0f0;
+}
+.wrap-video {
+    max-height: 680px;
+    overflow: hidden;
 }
 
 @media (max-width: 768px) {
