--- a/src/layouts/components/SideBar/Sidebar.module.scss
+++ b/src/layouts/components/SideBar/Sidebar.module.scss
@@ -3,3 +3,8 @@
     padding: 20px 0 26px 0px;
     margin-left: -16px;
 }
+@media (max-width: 768px) {
+    .wrapper {
+        display: none !important;
+    }
+}
