--- a/src/layouts/components/Header/Header.module.scss
+++ b/src/layouts/components/Header/Header.module.scss
@@ -74,3 +74,8 @@
     margin-left: 12px;
     cursor: pointer;
 }
+@media (max-width: 768px) {
+    .wrapper {
+        display: none !important;
+    }
+}
