--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -10,6 +10,33 @@
     overflow: hidden;
 }
 
+.scroll-buttons {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+}
+
+.scroll-up,
+.scroll-down {
+    width: 35%;
+    height: 50%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    border: none;
+    padding: 10px;
+    margin: 5px 50px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.scroll-up:hover,
+.scroll-down:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
 @media (max-width: 768px) {
     .home-container {
         padding-top: 20px;
