tach css component video

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -12,6 +12,10 @@
 
     --default-layout-horizontal-spacer: 24px;
     --font-family: 'ProximaNova', sans-serif;
+
+    --default-height-video: 780px;
+    --default-min-width-video: 420px;
+    --default-max-width-video: 800px;
 }
 
 * {
