--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -10,7 +10,7 @@
     max-width: 100%;
     padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
-    margin-top: var(--default-layout-header-height);
+    // margin-top: var(--default-layout-header-height);
 }
 
 .content {
