--- a/src/layouts/components/SideBar/Menu/Menu.module.scss
+++ b/src/layouts/components/SideBar/Menu/Menu.module.scss
@@ -24,6 +24,12 @@
     }
 }
 
+.menu-img {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 50px;
+}
 .title {
     margin-left: 10px;
     padding: 8px;
