--- a/src/components/Video/Video.module.scss
+++ b/src/components/Video/Video.module.scss
@@ -1,16 +1,11 @@
-.video-wrap-player {
-    max-width: 380px;
-    min-width: 360px;
+.video-container {
+    height: 100%;
 
-    min-height: 730px;
-    background-color: black;
     display: flex;
-    align-items: center;
     justify-content: center;
-    border-radius: 20px;
-    overflow: hidden;
+    align-items: center;
 }
-
 .videoItem {
-    object-fit: cover;
+    width: 100%;
+    object-fit: fill;
 }
