--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -1,18 +1,34 @@
 .home-container {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #f0f0f0;
+    height: var(--default-height-video);
+    overflow: hidden;
 }
 .wrap-video {
-    max-height: 730px;
-    overflow: hidden;
+    max-width: var(--default-max-width-video);
 }
 
 .video-list {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+.video-wrap-player {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    height: var(--default-height-video);
+    max-width: var(--default-min-width-video);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.videoItem {
+    height: 100%;
+    object-fit: contain;
 }
 
 .scroll-buttons {
