--- a/src/components/pages/Upload/component/UploadDetail/UploadDetail.module.scss
+++ b/src/components/pages/Upload/component/UploadDetail/UploadDetail.module.scss
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: column;
     border: 1px solid rgb(154, 150, 150) !important;
-    gap: 50px;
 }
 
 .wrap-progress-upload {
@@ -37,7 +36,8 @@
 .wrap {
     display: flex;
     justify-content: space-between;
-    padding: 0px 20px;
+    margin: 15px 20px;
+    gap: 10px;
 }
 
 .panel-left {
@@ -60,15 +60,23 @@
 .btn-panel-left {
     margin-top: 20px;
     margin-right: 10px;
-    width: 150px;
+}
+
+.panel-right {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #000;
 }
 
 .wrap-video-preview {
-    min-width: 450px;
+    width: 80%;
     display: flex;
     justify-content: center;
-    padding-top: 20px;
 }
 .video-preview {
-    min-width: 450px !important;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    background-color: red;
 }
