update dùng thẻ iframe

--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -21,7 +21,7 @@
     justify-content: center;
     background-color: black;
     height: var(--default-height-video);
-    max-width: var(--default-min-width-video);
+    width: var(--default-min-width-video);
     border-radius: 10px;
     overflow: hidden;
 }
