--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -13,7 +13,7 @@
     --default-layout-horizontal-spacer: 24px;
     --font-family: 'ProximaNova', sans-serif;
 
-    --default-height-video: 780px;
+    --default-height-video: 100vh;
     --default-min-width-video: 420px;
     --default-max-width-video: 800px;
 }
