--- a/src/layouts/components/SideBar/Sidebar.module.scss
+++ b/src/layouts/components/SideBar/Sidebar.module.scss
@@ -2,6 +2,8 @@
     width: 356px;
     padding: 20px 0 26px 0px;
     margin-left: -16px;
+    height: 100vh;
+    overflow-y: auto;
 }
 .logo {
     display: flex;
