--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,5 +1,5 @@
 @import 'normalize.css';
-
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&display=swap');
 :root {
     --primary: #1a73e8;
     --black: #000;
@@ -11,11 +11,14 @@
     --text-color: #161823;
 
     --default-layout-horizontal-spacer: 24px;
-    --font-family: 'ProximaNova', sans-serif;
+    --font-family: 'Google Sans', sans-serif;
 
     --default-height-video: 100vh;
     --default-min-width-video: 420px;
     --default-max-width-video: 800px;
+    //googlemeet
+
+    --default-layout-border-radius: 25px;
 }
 
 * {
@@ -30,7 +33,7 @@
 
 body {
     font-family: var(--font-family);
-    font-size: 1.6rem;
+    font-size: 1rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
     color: var(--text-color);
