--- a/src/layouts/GoogleMeet/GoogleMeet.module.scss
+++ b/src/layouts/GoogleMeet/GoogleMeet.module.scss
@@ -1,8 +1,21 @@
 .wrapper {
     width: 100%;
+    flex-direction: column;
     height: 100vh;
+}
+.container {
+    width: 100%;
+
     display: flex;
 
     align-items: center;
     background-color: #f5f5f5;
+}
+.call-group {
+    width: 100%;
+}
+
+.tab-content {
+    width: 100%;
+    flex: 1;
 }
