--- a/src/layouts/components/CallGroup/CallGroup.module.scss
+++ b/src/layouts/components/CallGroup/CallGroup.module.scss
@@ -1,5 +1,25 @@
 .wrapper {
-    width: 60%;
-    height: 80vh;
+    width: 75%;
+
+    // width: 100%; //dùng khi cho full call group
+    overflow: auto;
+    height: 90vh;
     background-color: red;
+}
+.close {
+    width: 100% !important;
+}
+.videos {
+    width: 100%;
+    height: 100%;
+
+    background-color: blue;
+    display: flex;
+    justify-content: space-evenly;
+}
+.maxVideo {
+    padding: 1% 8%;
+}
+.miniVideo {
+    padding: 5% 1%;
 }
