--- a/src/layouts/components/NavCall/NavCall.module.scss
+++ b/src/layouts/components/NavCall/NavCall.module.scss
@@ -1,5 +1,7 @@
 .wrapper {
     width: 100%;
     background-color: yellow;
-    height: 50px;
+    height: 10%;
+    display: flex;
+    justify-content: space-evenly;
 }
