--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -95,3 +95,13 @@
     min-width: 140px;
     padding: 14px 16px;
 }
+
+.outlinever1 {
+    width: 50px !important;
+    height: 50px !important;
+    min-width: 0 !important;
+    font-size: 22px;
+    color: white;
+    border-radius: 50%;
+    background-color: rgb(63, 60, 60) !important;
+}
