--- a/src/layouts/components/NavCall/NavCall.module.scss
+++ b/src/layouts/components/NavCall/NavCall.module.scss
@@ -1,7 +1,30 @@
 .wrapper {
     width: 100%;
-    background-color: yellow;
+    background-color: black;
     height: 10%;
     display: flex;
     justify-content: space-evenly;
+}
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 25px;
+}
+.nav-left {
+    color: white !important;
+}
+
+.btnLeave {
+    border-radius: 50px !important;
+    min-width: 75px !important;
+    background-color: rgb(244, 45, 45) !important;
+}
+/* 🎯 Responsive cho màn hình nhỏ hơn 480px (Mobile nhỏ) */
+@media (max-width: 480px) {
+    .nav-left {
+        display: none !important;
+    }
 }
