xong phan giao dien tin nhan

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -17,7 +17,7 @@
     --default-min-width-video: 420px;
     --default-max-width-video: 800px;
     //googlemeet
-
+    --default-background-googlemeet-color: #202124;
     --default-layout-border-radius: 25px;
 }
 
