--- a/src/layouts/components/NavCall/NavCall.module.scss
+++ b/src/layouts/components/NavCall/NavCall.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: 100%;
-    background-color: black;
+    background-color: var(--default-background-googlemeet-color);
     height: 10%;
     display: flex;
     justify-content: space-evenly;
