--- a/src/layouts/components/CallGroup/CallGroup.module.scss
+++ b/src/layouts/components/CallGroup/CallGroup.module.scss
@@ -4,7 +4,7 @@
     // width: 100%; //dùng khi cho full call group
     overflow: auto;
     height: 90vh;
-    background-color: red;
+    background-color: var(--default-background-googlemeet-color);
 }
 .close {
     width: 100% !important;
@@ -13,7 +13,8 @@
     width: 100%;
     height: 100%;
 
-    background-color: blue;
+    background-color: var(--default-background-googlemeet-color);
+
     display: flex;
     justify-content: space-evenly;
 }
@@ -22,4 +23,11 @@
 }
 .miniVideo {
     padding: 5% 1%;
+}
+
+/* 🎯 Responsive cho màn hình nhỏ hơn 480px (Mobile nhỏ) */
+@media (max-width: 480px) {
+    .wrapper {
+        width: 20%;
+    }
 }
