--- a/src/layouts/components/TabCall/TabCall.module.scss
+++ b/src/layouts/components/TabCall/TabCall.module.scss
@@ -1,10 +1,15 @@
 .wrapper {
     width: 100%;
-
-    background-color: rgb(37, 36, 36);
-    height: 90vh;
     display: flex;
     align-items: center;
+    background-color: rgb(37, 36, 36);
+    height: 90vh;
+}
+.container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .close {
