--- a/src/layouts/components/TabCall/components/MessageMeeting/MessageMeeting.module.scss
+++ b/src/layouts/components/TabCall/components/MessageMeeting/MessageMeeting.module.scss
@@ -1,12 +1,43 @@
-.chiTietCuocGoi {
+.wrap {
     width: 100%;
     height: 95%;
     overflow: auto;
-    background-color: white !important;
+    background-color: #ffffff !important;
 }
-.list {
+.listMessage {
     max-height: inherit;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 50px;
+    list-style-type: none;
+    overflow: auto;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.blSendMessage {
+    width: 100%;
+
+    display: flex;
+    padding: 10px;
+    justify-content: space-around;
+}
+.inpTinNhan {
+    flex: 1;
+    background-color: #f3f6f8;
+    border-radius: 50px;
+}
+.btnSend {
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    margin-left: 10px;
+    border-radius: 50px;
+    background-color: #ffffff;
+    color: #1072eb;
 }
