--- a/src/layouts/components/TabCall/components/TitleTabMeeting/TitleTabMeeting.module.scss
+++ b/src/layouts/components/TabCall/components/TitleTabMeeting/TitleTabMeeting.module.scss
@@ -1,16 +1,35 @@
 .titleMeeting {
-    width: 100%;
+    width: 360px;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     padding: 5px 10px;
+    position: fixed;
+    background-color: white;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 
 .icon-exit {
     cursor: pointer;
     color: black;
     font-size: 25px;
-
+    position: absolute;
     padding: 5px 10px;
+    right: 0px;
+    top: 0px;
+    flex: 1;
+}
+/* 🎯 Responsive cho màn hình nhỏ hơn 480px (Mobile nhỏ) */
+@media (max-width: 480px) {
+    .titleMeeting {
+        width: 300px;
+    }
 }
