--- a/src/layouts/components/CallGroup/CallGroup.module.scss
+++ b/src/layouts/components/CallGroup/CallGroup.module.scss
@@ -9,7 +9,7 @@
 .close {
     width: 100% !important;
 }
-.videos {
+.listVideo {
     width: 100%;
     height: 100%;
 
@@ -17,12 +17,26 @@
 
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5px;
 }
 .maxVideo {
     padding: 1% 8%;
 }
 .miniVideo {
     padding: 5% 1%;
+}
+.motnguoi {
+    width: 100%;
+}
+.hainguoi {
+    width: 50%;
+    padding: 0px 5px;
+}
+.trenhainguoi {
+    width: 33%;
+    height: 50%;
 }
 
 /* 🎯 Responsive cho màn hình nhỏ hơn 480px (Mobile nhỏ) */
