--- a/src/layouts/components/TabCall/components/MessageMeeting/MessageMeeting.module.scss
+++ b/src/layouts/components/TabCall/components/MessageMeeting/MessageMeeting.module.scss
@@ -4,25 +4,28 @@
     overflow: auto;
     background-color: #ffffff !important;
 }
-.listMessage {
-    max-height: inherit;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 50px;
-    list-style-type: none;
-    overflow: auto;
-}
-
 .container {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
+.listMessage {
+    min-height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 50px;
+    list-style-type: none;
+    flex: 1;
+    overflow: auto;
+}
+.listMessage .you {
+    order: -1;
+}
+
 .blSendMessage {
     width: 100%;
-
     display: flex;
     padding: 10px;
     justify-content: space-around;
